switching to animate only

--- a/TrackEditor/DisplaySettings.ui
+++ b/TrackEditor/DisplaySettings.ui
@@ -332,34 +332,6 @@
        </item>
        <item row="2" column="0" colspan="4">
         <layout class="QGridLayout" name="gridLayout_2">
-         <item row="2" column="0">
-          <widget class="QCheckBox" name="ckAudio">
-           <property name="text">
-            <string>Audio Markers</string>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="0">
-          <widget class="QCheckBox" name="ckEnvironment">
-           <property name="text">
-            <string>Environment</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="0">
-          <widget class="QCheckBox" name="ckAILines">
-           <property name="text">
-            <string>AI Lines</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="QCheckBox" name="ckAttachLast">
-           <property name="text">
-            <string>Attach Last</string>
-           </property>
-          </widget>
-         </item>
          <item row="0" column="2">
           <spacer name="horizontalSpacer_2">
            <property name="orientation">
@@ -373,28 +345,14 @@
            </property>
           </spacer>
          </item>
-         <item row="1" column="1">
-          <widget class="QCheckBox" name="ckSigns">
+         <item row="1" column="0">
+          <widget class="QCheckBox" name="ckAILines">
            <property name="text">
-            <string>Signs</string>
+            <string>AI Lines</string>
            </property>
           </widget>
          </item>
-         <item row="2" column="1">
-          <widget class="QCheckBox" name="ckStunts">
-           <property name="text">
-            <string>Stunt Markers</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="0">
-          <widget class="QCheckBox" name="ckHighlightSelection">
-           <property name="text">
-            <string>Highlight Selected</string>
-           </property>
-          </widget>
-         </item>
-         <item row="5" column="0" colspan="2">
+         <item row="4" column="0" colspan="2">
           <layout class="QHBoxLayout" name="horizontalLayout">
            <item>
             <widget class="QLabel" name="label_4">
@@ -440,42 +398,54 @@
            </item>
           </layout>
          </item>
-         <item row="4" column="0" colspan="3">
-          <layout class="QHBoxLayout" name="horizontalLayout_2">
-           <item>
-            <widget class="QLabel" name="lblStuntPos">
-             <property name="text">
-              <string>Stunt Position</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QComboBox" name="cbStuntPos">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <spacer name="horizontalSpacer_4">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeType">
-              <enum>QSizePolicy::Expanding</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-          </layout>
+         <item row="2" column="1">
+          <widget class="QCheckBox" name="ckStunts">
+           <property name="text">
+            <string>Stunt Markers</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QCheckBox" name="ckHighlightSelection">
+           <property name="text">
+            <string>Highlight Selected</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="0">
+          <widget class="QCheckBox" name="ckEnvironment">
+           <property name="text">
+            <string>Environment</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QCheckBox" name="ckAttachLast">
+           <property name="text">
+            <string>Attach Last</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QCheckBox" name="ckSigns">
+           <property name="text">
+            <string>Signs</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QCheckBox" name="ckAudio">
+           <property name="text">
+            <string>Audio Markers</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="1">
+          <widget class="QCheckBox" name="ckAnimateStunts">
+           <property name="text">
+            <string>Animate Stunts</string>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
