--- a/TrackEditor/EditSurfaceDialog.ui
+++ b/TrackEditor/EditSurfaceDialog.ui
@@ -78,125 +78,6 @@
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="0">
-      <widget class="QCheckBox" name="ck31Wall">
-       <property name="text">
-        <string>(Inner walls only) Attach wall to center</string>
-       </property>
-      </widget>
-     </item>
-     <item row="13" column="0">
-      <widget class="QCheckBox" name="ck19NonMagnetic">
-       <property name="text">
-        <string>Non-magnetic</string>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="1">
-      <widget class="QCheckBox" name="ck10PartialTrans">
-       <property name="text">
-        <string>Partial transparency</string>
-       </property>
-      </widget>
-     </item>
-     <item row="8" column="1">
-      <widget class="QCheckBox" name="ck8ApplyTexture">
-       <property name="text">
-        <string>Apply texture</string>
-       </property>
-      </widget>
-     </item>
-     <item row="8" column="0">
-      <widget class="QCheckBox" name="ck24Yellow">
-       <property name="text">
-        <string>Yellow on track map</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QCheckBox" name="ck14">
-       <property name="text">
-        <string>Bit 14</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QCheckBox" name="ck29Echo">
-       <property name="text">
-        <string>Echo</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QCheckBox" name="ck15Livery">
-       <property name="text">
-        <string>(Cars only) Change livery</string>
-       </property>
-      </widget>
-     </item>
-     <item row="16" column="0">
-      <widget class="QCheckBox" name="ck16TexturePair">
-       <property name="text">
-        <string>Texture pair</string>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="0">
-      <widget class="QCheckBox" name="ck26">
-       <property name="text">
-        <string>Bit 26</string>
-       </property>
-      </widget>
-     </item>
-     <item row="14" column="0">
-      <widget class="QCheckBox" name="ck18FlipVertically">
-       <property name="text">
-        <string>Flip vertically</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="0">
-      <widget class="QCheckBox" name="ck28">
-       <property name="text">
-        <string>Bit 28</string>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="1">
-      <widget class="QCheckBox" name="ck9AnmsLookup">
-       <property name="text">
-        <string>(Cars only) Lookup in anms array</string>
-       </property>
-      </widget>
-     </item>
-     <item row="12" column="0">
-      <widget class="QCheckBox" name="ck20Bounce">
-       <property name="text">
-        <string>Bounce off walls</string>
-       </property>
-      </widget>
-     </item>
-     <item row="11" column="0">
-      <widget class="QCheckBox" name="ck21Transparent">
-       <property name="text">
-        <string>Transparent (requires no texture)</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1">
-      <widget class="QCheckBox" name="ck12FlipHorizontally">
-       <property name="text">
-        <string>Flip horizontally</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QCheckBox" name="ck30Bounce">
-       <property name="text">
-        <string>Bounce off walls</string>
-       </property>
-      </widget>
-     </item>
      <item row="17" column="0">
       <spacer name="verticalSpacer">
        <property name="orientation">
@@ -213,69 +94,14 @@
        </property>
       </spacer>
      </item>
-     <item row="10" column="0">
-      <widget class="QCheckBox" name="ck22Wall">
+     <item row="14" column="0">
+      <widget class="QCheckBox" name="ck18FlipVertically">
        <property name="text">
-        <string>Wall (cannot be driven on)</string>
+        <string>Flip vertically</string>
        </property>
       </widget>
      </item>
-     <item row="5" column="1">
-      <widget class="QCheckBox" name="ck11Back">
-       <property name="text">
-        <string>Display back texture</string>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="0">
-      <widget class="QCheckBox" name="ck27PairNext">
-       <property name="text">
-        <string>Pair next texture (requires texture pair)</string>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="0">
-      <widget class="QCheckBox" name="ck25Pit">
-       <property name="text">
-        <string>Pit</string>
-       </property>
-      </widget>
-     </item>
-     <item row="19" column="1">
-      <spacer name="verticalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="15" column="0">
-      <widget class="QCheckBox" name="ck17NonSolid">
-       <property name="text">
-        <string>Non-solid</string>
-       </property>
-      </widget>
-     </item>
-     <item row="9" column="0">
-      <widget class="QCheckBox" name="ck23">
-       <property name="text">
-        <string>Bit 23</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <widget class="QCheckBox" name="ck13Motion">
-       <property name="text">
-        <string>(Cars only) Animate motion</string>
-       </property>
-      </widget>
-     </item>
-     <item row="9" column="1" rowspan="8">
+     <item row="9" column="1" rowspan="4">
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QPushButton" name="pbTexture1">
@@ -311,6 +137,194 @@
           <string/>
          </property>
         </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="8" column="0">
+      <widget class="QCheckBox" name="ck24Yellow">
+       <property name="text">
+        <string>Yellow on track map</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="0">
+      <widget class="QCheckBox" name="ck25Pit">
+       <property name="text">
+        <string>Pit</string>
+       </property>
+      </widget>
+     </item>
+     <item row="11" column="0">
+      <widget class="QCheckBox" name="ck21Transparent">
+       <property name="text">
+        <string>Transparent (requires no texture)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="9" column="0">
+      <widget class="QCheckBox" name="ck23">
+       <property name="text">
+        <string>Bit 23</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="0">
+      <widget class="QCheckBox" name="ck26">
+       <property name="text">
+        <string>Bit 26</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QCheckBox" name="ck12FlipHorizontally">
+       <property name="text">
+        <string>Flip horizontally</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="0">
+      <widget class="QCheckBox" name="ck27PairNext">
+       <property name="text">
+        <string>Pair next texture (requires texture pair)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="15" column="0">
+      <widget class="QCheckBox" name="ck17NonSolid">
+       <property name="text">
+        <string>Non-solid</string>
+       </property>
+      </widget>
+     </item>
+     <item row="13" column="0">
+      <widget class="QCheckBox" name="ck19NonMagnetic">
+       <property name="text">
+        <string>Non-magnetic</string>
+       </property>
+      </widget>
+     </item>
+     <item row="16" column="0">
+      <widget class="QCheckBox" name="ck16TexturePair">
+       <property name="text">
+        <string>Texture pair</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="1">
+      <widget class="QCheckBox" name="ck9AnmsLookup">
+       <property name="text">
+        <string>(Cars only) Lookup in anms array</string>
+       </property>
+      </widget>
+     </item>
+     <item row="12" column="0">
+      <widget class="QCheckBox" name="ck20Bounce">
+       <property name="text">
+        <string>Bounce off walls</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QCheckBox" name="ck29Echo">
+       <property name="text">
+        <string>Echo</string>
+       </property>
+      </widget>
+     </item>
+     <item row="10" column="0">
+      <widget class="QCheckBox" name="ck22Wall">
+       <property name="text">
+        <string>Wall (cannot be driven on)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="1">
+      <widget class="QCheckBox" name="ck8ApplyTexture">
+       <property name="text">
+        <string>Apply texture</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1">
+      <widget class="QCheckBox" name="ck10PartialTrans">
+       <property name="text">
+        <string>Partial transparency</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QCheckBox" name="ck13Motion">
+       <property name="text">
+        <string>(Cars only) Animate motion</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QCheckBox" name="ck15Livery">
+       <property name="text">
+        <string>(Cars only) Change livery</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QCheckBox" name="ck14">
+       <property name="text">
+        <string>Bit 14</string>
+       </property>
+      </widget>
+     </item>
+     <item row="19" column="1">
+      <spacer name="verticalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="0" column="0">
+      <widget class="QCheckBox" name="ck31Wall">
+       <property name="text">
+        <string>(Inner walls only) Attach wall to center</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QCheckBox" name="ck11Back">
+       <property name="text">
+        <string>Display back texture</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QCheckBox" name="ck28">
+       <property name="text">
+        <string>Bit 28</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QCheckBox" name="ck30Bounce">
+       <property name="text">
+        <string>Bounce off walls</string>
+       </property>
+      </widget>
+     </item>
+     <item row="13" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_5">
+       <item>
+        <widget class="QLabel" name="lblTransparency">
+         <property name="text">
+          <string>Transparency Type</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="cbTransparency"/>
        </item>
       </layout>
      </item>
