--- a/TrackEditor/DebugChunkData.ui
+++ b/TrackEditor/DebugChunkData.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>EditDataWidget</class>
- <widget class="QWidget" name="EditDataWidget">
+ <class>DebugChunkData</class>
+ <widget class="QWidget" name="DebugChunkData">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -26,7 +26,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-1105</y>
+        <y>0</y>
         <width>619</width>
         <height>1761</height>
        </rect>
