--- a/TrackEditor/PreferencesDialog.ui
+++ b/TrackEditor/PreferencesDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>435</width>
-    <height>210</height>
+    <height>295</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -66,14 +66,21 @@
       <string>Copy/Paste Behavior</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="1">
+      <item row="2" column="1">
        <widget class="QCheckBox" name="ckRelPitch">
         <property name="text">
          <string>Relative Pitch</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="0">
+      <item row="4" column="2">
+       <widget class="QCheckBox" name="ckPasteAIBehavior">
+        <property name="text">
+         <string>Paste AI behavior</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
        <widget class="QCheckBox" name="ckRelYaw">
         <property name="text">
          <string>Relative Yaw</string>
@@ -83,52 +90,73 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="2">
+      <item row="2" column="2">
        <widget class="QCheckBox" name="ckRelRoll">
         <property name="text">
          <string>Relative Roll</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0" colspan="3">
-       <widget class="Line" name="line">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QCheckBox" name="ckPasteSurfaceData">
-        <property name="text">
-         <string>Paste Surface Data</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QCheckBox" name="ckPasteAIBehavior">
-        <property name="text">
-         <string>Paste AI behavior</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="2">
+      <item row="5" column="0">
        <widget class="QCheckBox" name="ckPasteDrawOrder">
         <property name="text">
          <string>Paste Draw Order</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
+      <item row="4" column="0">
+       <widget class="QCheckBox" name="ckPasteGeometry">
+        <property name="text">
+         <string>Paste Geometry Data</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QRadioButton" name="rbPasteNew">
+        <property name="text">
+         <string>Paste New Chunks</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="2">
        <widget class="QCheckBox" name="ckPasteSigns">
         <property name="text">
          <string>Paste Signs</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
+      <item row="0" column="1" colspan="2">
+       <widget class="QRadioButton" name="rbPasteData">
+        <property name="text">
+         <string>Paste Data into Existing Chunks</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0" colspan="3">
+       <widget class="Line" name="line">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="1">
        <widget class="QCheckBox" name="ckPasteAudio">
         <property name="text">
          <string>Paste Audio</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QCheckBox" name="ckPasteSurfaceData">
+        <property name="text">
+         <string>Paste Surface Data</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0" colspan="3">
+       <widget class="Line" name="line_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
         </property>
        </widget>
       </item>
