surface dialog now takes effect immediately and only the option changed is applied to all selected chunks

--- a/TrackEditor/EditSurfaceDialog.ui
+++ b/TrackEditor/EditSurfaceDialog.ui
@@ -346,16 +346,9 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="pbApply">
-       <property name="text">
-        <string>Apply</string>
-       </property>
-      </widget>
-     </item>
-     <item>
       <widget class="QPushButton" name="pbCancel">
        <property name="text">
-        <string>Cancel</string>
+        <string>Close</string>
        </property>
       </widget>
      </item>
