--- a/TrackEditor/EditSeriesDialog.ui
+++ b/TrackEditor/EditSeriesDialog.ui
@@ -117,18 +117,45 @@
      <item row="3" column="4">
       <widget class="QComboBox" name="cbRate"/>
      </item>
-     <item row="2" column="5">
-      <widget class="QLabel" name="lblIncrement">
-       <property name="toolTip">
-        <string>Amount to alter field value each iteration (optional)</string>
-       </property>
-       <property name="text">
-        <string>Increment</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="5">
-      <widget class="QLineEdit" name="leIncrement"/>
+     <item row="2" column="5" rowspan="2">
+      <layout class="QGridLayout" name="gridLayout">
+       <item row="0" column="0">
+        <widget class="QLabel" name="lblIncrement">
+         <property name="toolTip">
+          <string>Amount to alter field value each iteration (optional)</string>
+         </property>
+         <property name="text">
+          <string>Increment</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLineEdit" name="leIncrement"/>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLabel" name="lblPower">
+         <property name="text">
+          <string>Power</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QDoubleSpinBox" name="dsbPower">
+         <property name="minimum">
+          <double>0.010000000000000</double>
+         </property>
+         <property name="maximum">
+          <double>10.000000000000000</double>
+         </property>
+         <property name="singleStep">
+          <double>0.100000000000000</double>
+         </property>
+         <property name="value">
+          <double>2.000000000000000</double>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
     </layout>
    </item>
