--- a/TrackEditor/DisplaySettings.ui
+++ b/TrackEditor/DisplaySettings.ui
@@ -345,10 +345,59 @@
            </property>
           </spacer>
          </item>
+         <item row="1" column="1">
+          <widget class="QCheckBox" name="ckSigns">
+           <property name="text">
+            <string>Signs</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QCheckBox" name="ckStunts">
+           <property name="text">
+            <string>Stunt Markers</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="0">
+          <widget class="QCheckBox" name="ckEnvironment">
+           <property name="text">
+            <string>Environment</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="1">
+          <widget class="QCheckBox" name="ckAnimateStunts">
+           <property name="text">
+            <string>Animate Stunts</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QCheckBox" name="ckAudio">
+           <property name="text">
+            <string>Audio Markers</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QCheckBox" name="ckAttachLast">
+           <property name="text">
+            <string>Attach Last</string>
+           </property>
+          </widget>
+         </item>
          <item row="1" column="0">
           <widget class="QCheckBox" name="ckAILines">
            <property name="text">
             <string>AI Lines</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QCheckBox" name="ckHighlightSelection">
+           <property name="text">
+            <string>Highlight Selected</string>
            </property>
           </widget>
          </item>
@@ -357,7 +406,7 @@
            <item>
             <widget class="QLabel" name="label_4">
              <property name="text">
-              <string>Scale</string>
+              <string>Camera Speed</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -365,21 +414,24 @@
             </widget>
            </item>
            <item>
-            <widget class="QSlider" name="sldScale">
+            <widget class="QSpinBox" name="sbCameraSpeed">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
              <property name="minimum">
-              <number>1</number>
+              <number>100</number>
              </property>
              <property name="maximum">
-              <number>10</number>
+              <number>3000</number>
+             </property>
+             <property name="singleStep">
+              <number>100</number>
              </property>
              <property name="value">
-              <number>1</number>
-             </property>
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="invertedAppearance">
-              <bool>false</bool>
+              <number>1000</number>
              </property>
             </widget>
            </item>
@@ -397,55 +449,6 @@
             </spacer>
            </item>
           </layout>
-         </item>
-         <item row="2" column="1">
-          <widget class="QCheckBox" name="ckStunts">
-           <property name="text">
-            <string>Stunt Markers</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="0">
-          <widget class="QCheckBox" name="ckHighlightSelection">
-           <property name="text">
-            <string>Highlight Selected</string>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="0">
-          <widget class="QCheckBox" name="ckEnvironment">
-           <property name="text">
-            <string>Environment</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="QCheckBox" name="ckAttachLast">
-           <property name="text">
-            <string>Attach Last</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QCheckBox" name="ckSigns">
-           <property name="text">
-            <string>Signs</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="0">
-          <widget class="QCheckBox" name="ckAudio">
-           <property name="text">
-            <string>Audio Markers</string>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="1">
-          <widget class="QCheckBox" name="ckAnimateStunts">
-           <property name="text">
-            <string>Animate Stunts</string>
-           </property>
-          </widget>
          </item>
         </layout>
        </item>
