--- a/TrackEditor/ExportWizard.ui
+++ b/TrackEditor/ExportWizard.ui
@@ -70,7 +70,7 @@
       </widget>
      </item>
      <item>
-      <widget class="Line" name="line_2">
+      <widget class="Line" name="lineBacks">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
